[gd_scene load_steps=4 format=3 uid="uid://uinurfovxmcg"]

[ext_resource type="Script" uid="uid://coum3iki2l4f6" path="res://Scripts/settings.gd" id="1_d8bn1"]
[ext_resource type="Shader" uid="uid://dew5sedirejj0" path="res://Assets/Shaders/blur.gdshader" id="1_ji6da"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8agtr"]
shader = ExtResource("1_ji6da")
shader_parameter/strength = 3.3
shader_parameter/mix_percentage = 0.3

[node name="Settings" type="Control"]
material = SubResource("ShaderMaterial_8agtr")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d8bn1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 177
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 177
theme_override_constants/margin_bottom = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VolumeSettings" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MainVolume" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/MainVolume"]
custom_minimum_size = Vector2(260, 25)
layout_mode = 2
size_flags_horizontal = 8
text = "Main Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MainSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/MainVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="SFXVolume" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/SFXVolume"]
custom_minimum_size = Vector2(260, 25)
layout_mode = 2
size_flags_horizontal = 8
text = "Sound Effects Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/SFXVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/MusicVolume"]
custom_minimum_size = Vector2(260, 25)
layout_mode = 2
size_flags_horizontal = 8
text = "Music Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/MusicVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VideoSettings" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings/Resolution"]
custom_minimum_size = Vector2(260, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "Resolution"
horizontal_alignment = 2

[node name="ResolutionOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings/Resolution"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "480p"
popup/item_0/id = 0
popup/item_1/text = "720p"
popup/item_1/id = 1
popup/item_2/text = "900p"
popup/item_2/id = 2
popup/item_3/text = "1080p"
popup/item_3/id = 3
popup/item_4/text = "UW 1080p"
popup/item_4/id = 5
popup/item_5/text = "1440p"
popup/item_5/id = 4
popup/item_6/text = "2160p"
popup/item_6/id = 6

[node name="ScreenMode" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings/ScreenMode"]
custom_minimum_size = Vector2(260, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "Screen Mode"
horizontal_alignment = 2

[node name="ScreenModeOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings/ScreenMode"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "FullScreen"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2
popup/item_3/text = "Borderless FullScreen"
popup/item_3/id = 3

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Save Settings"

[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/MainVolume/MainSlider" to="." method="_on_main_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/SFXVolume/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSettings/MusicVolume/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings/Resolution/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VideoSettings/ScreenMode/ScreenModeOption" to="." method="_on_screen_mode_option_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
